[metadata]
name = repo_name
version = 0.0.1
author = author_name
author_email = this-is-not-an-email@a.com
description = Describe the repository
long_description = file: README.md
long_description_content_type = text/markdown
url = github_url
project_urls =
    Bug Tracker = github_url/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =   # Empty = Root directory
packages = find:
python_requires = >=3.7
install_requires =
  ipython
  numpy
  scipy
  matplotlib

[options.packages.find]
where = src