[metadata]
name = xdem_demo
version = 0.0.1
author = xdem contributors
author_email = this-is-not-an-email@a.com
description = A set of notebooks and scripts to demonstrate xdem features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlacioHack/xdem-demo
project_urls =
    Bug Tracker = https://github.com/GlacioHack/xdem-demo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =   # Empty = Root directory
packages = find:
python_requires = >=3.8
install_requires =
  jupyter
  jupytext
  numpy
  matplotlib
  rasterio
  scipy
  opencv
  geoutils
  xdem

[options.packages.find]
where = src